Simplify Bone and update tests